--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-#profile_img {
-    height: 400px;
-}
-
-table {
-    /* width: 50% !important; */
-}
-
 a {
     color: rgb(4, 135, 250);
     text-decoration: none;
@@ -27,6 +19,7 @@ a:visited {
 
 }
 
+.korean,
 .hobbies {
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 300;
